<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:orientation="vertical">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_scrollFlags="enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/title_activity_register"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <ProgressBar
            android:id="@+id/reg_progressbar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-7dp"
            android:alpha="0"
            android:indeterminate="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/scrollingBehaviour">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <pranav.views.TextField.TextField
                android:id="@+id/firstname_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/pad4dp"
                app:hint="@string/textfield_label_first_name"
                app:layout_constraintEnd_toStartOf="@+id/lastname_field"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="50"
                app:textFieldColor="@color/colorPrimary"
                app:textFieldStyle="outline" />

            <pranav.views.TextField.TextField
                android:id="@+id/lastname_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                app:hint="@string/textfield_label_last_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/firstname_field"
                app:layout_constraintTop_toTopOf="@+id/firstname_field"
                app:layout_constraintWidth_percent="50"
                app:textFieldColor="@color/colorPrimary"
                app:textFieldStyle="outline" />

            <pranav.views.TextField.TextField
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:hint="@string/textfield_label_email"
                app:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstname_field"
                app:textFieldColor="@color/colorPrimary"
                app:textFieldStyle="outline" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/t1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/textfield_label_password"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="@id/email_field"
                app:layout_constraintStart_toStartOf="@id/email_field"
                app:layout_constraintTop_toBottomOf="@id/email_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pad16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="clickListener"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/t1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <FrameLayout
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="#A6676767"
        android:onClick="clickListener"
        android:visibility="gone">

    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
